--- a/index.html
+++ b/index.html
@@ -2,27 +2,26 @@
 <html lang="eng">
  <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="wide=device-width, inital-scale=1.0" />
+        <meta name="viewport" content="wide=device-width,inital-scale=1.0" />
         <link rel="stylesheet" href="styles.css" />
         <title>Expanding Cards</title>
  </head>
  <body>
-    <h1>Expand Me</h1>
     <div class="container">
-    <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1657088391764-5a0f916bfbb7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=60')">
+    <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1544367567-0f2fcb009e0b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8ZXhlcmNpc2V8ZW58MHx8MHx8&auto=format&fit=crop&w=800&q=60')">
     <h3>Posture</h3>
     </div>
-    <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1455218873509-8097305ee378?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjR8fG5hdHVyZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=800&q=60')">
+    <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1441974231531-c6227db76b6e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8bmF0dXJlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60')">
         <h3>Nature</h3>
         </div>
-        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1584559582128-b8be739912e1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fGZydWl0fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60')">
+        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1490818387583-1baba5e638af?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bnV0cml0aW9ufGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60')">
             <h3>Nutrition</h3>
             </div>
             <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1502101872923-d48509bff386?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y2hhbGxlbmdlc3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=800&q=60')">
                 <h3>Adversity</h3>
                 </div>
-                <div class="panel" style="background-image: url('')">
-                    <h3></h3>
+                <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1458014854819-1a40aa70211c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Z3Jvd3RofGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60')">
+                    <h3>Growth</h3>
                     </div>
     </div>
     <script src="main.js"></script>
